--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
     <aside class="benefits">
         <section >
             <h3>Lead Generation</h3>
-            <img src="./images/lead-generation.png" alt="turning leads into money icon"/>
+            <img src="./images/lead-generation.png" alt="cog funneling into money icon"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section>
             <h3>Brand Awareness</h3>
-            <img src="./images/brand-awareness.png" alt="discovering your brand lightbulb icon"/>
+            <img src="./images/brand-awareness.png" alt="emanating lightbulb in a stand icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section>
             <h3>Cost Management</h3>
-            <img src="./images/cost-management.png" alt="less advertising equals more money icon"/>
+            <img src="./images/cost-management.png" alt="a cog behind 3 coins with dollar signs icon"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
